Added Add appointments feature, and a public display page.

--- a/app.ini
+++ b/app.ini
@@ -4,8 +4,8 @@ module = wsgi
 master = true
 processes = 5
 
-socket = app.sock
-chmod-socket =600
+socket = 0.0.0.0:8000
+chmod-socket = 666
 vacuum = true
 
 die-on-term = true
